VR: Delay setting present result until DON flow completes.

This CL does two main things:
1. It delays telling the webVR page the presentation result until
the DON flow is completed.
2. It keeps Chrome in VR when we're going through the DON flow for
both sanity and smoothness reasons (we now resume ~instantly after
the DON flow).

This CL inadvertently exposed a focus issue around presentation,
which is fixed by making sure the VrDisplay isn't blurred due to
focus while presenting. It also drive-by fixes some possible races
in starting/ending presentation, making sure bindings are closed
appropriately.

Bug: 737259, 737656
Change-Id: I97892617a75a597effd70dbadbf53547a2578825
Reviewed-on: https://chromium-review.googlesource.com/553558
Reviewed-by: Brandon Jones <bajones@chromium.org>
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Cr-Commit-Position: refs/heads/master@{#483815}
Former-commit-id: dcc6da1cac65953c78288211444ce8e83c188999